--- a/wercker.yml
+++ b/wercker.yml
@@ -17,3 +17,9 @@ build:
     - script:
         name: copy vendor to cache
         code: cp -Rf vendor $COMPOSER_CACHE_DIR
+    - script:
+        name: fix sym links
+        code: ln -sf ../phpunit/phpunit/phpunit vendor/bin/phpunit && ln -sf ../brianium/paratest/bin/paratest vendor/bin/paratest
+    - script:
+        name: PHPUnit tests
+        code: ./vendor/bin/paratest -f --colors -m 2 -p 4 tests
