--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "khiem.le@workhouse.me"
         }
     ],
-    "require": {}
+    "require": {
+        "phpunit/phpunit": "^5.7"
+    }
 }
